Changed index message

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <div class="flex justify-center"> 
         <div class="card card-side bg-base-100 shadow-xl w-96">
             <div class="card-body">
-            <h2 class="card-title">Index page</h2>
+            <h2 class="card-title">Index page X</h2>
             <p>Static site running on OpenShift</p>
             <img src="images/apache.jpg" />
             <img src="images/openshift.png" />
